[package]
name = "cursive_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
cursive = "0.20"
default-features = false
features = ["pancurses-backend"]

[profile.release]
opt-level = 3

[dependencies]
huffman_en = {path = "../huffman_en"}
array_sort = {path ="../array_sort"}
binary_tree = {path = "../binary_tree"}
binary_merge = {path = "../binary_merge"}